--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.jpa.hibernate.use_sql_coments=true
 spring.jpa.hibernate.format_sql=true
 spring.jpa.hibernate.type=trace
 
+#REtirar quando vir o Token
+security.basic.enabled=false
+
+
+#paginacao
+paginacao.qtd_por_pagina=25
+
+# JWT
+#jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+#jwt.expiration=604800
