--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,12 @@ spring.jpa.hibernate.format_sql=true
 spring.jpa.hibernate.type=trace
 
 #REtirar quando vir o Token
-security.basic.enabled=false
-
+#security.basic.enabled=false
 
 #paginacao
 paginacao.qtd_por_pagina=25
 
 # JWT
-#jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 # token com duração de 7 dias
-#jwt.expiration=604800
+jwt.expiration=604800
