ajuste para validação token JWt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=123
 
 #comnado sql
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.use_sql_coments=true
-spring.jpa.hibernate.format_sql=true
-spring.jpa.hibernate.type=trace
+spring.profiles.active=dev
 
-#REtirar quando vir o Token
-#security.basic.enabled=false
+# exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
 
 #paginacao
 paginacao.qtd_por_pagina=25
